--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -50,8 +50,13 @@ border-radius: 10px;
 font-weight: 600;
 font-size: 16px;
 border-style: none;
-
+transition: .2s ease-in;
 }
+.header-reserve-button:hover {
+    color: #f4ce14;
+    background-color: #333333;
+
+    }
 
 
 
