--- a/src/components/Specials.css
+++ b/src/components/Specials.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;800&family=Markazi+Text:wght@400;500&display=swap');
 
 .specials-container {
     display: flex;
@@ -7,7 +8,8 @@
 }
 
 .specials-h2 {
-    font-size: 3rem;
+    font-family: 'Markazi Text', serif;
+    font-size: 5rem;
     color: #333333;
 }
 
@@ -26,5 +28,8 @@
 }
 
 .special-card-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 35px;
+    margin-top: 20px;
 }
