--- a/src/components/SpecialsCard.css
+++ b/src/components/SpecialsCard.css
@@ -1,12 +1,47 @@
 
+.card {
+    display: flex;
+    flex-direction: column;
+    background-color: #edefee;
+    font-family: 'Karla', sans-serif;
+    max-width: 300px;
+}
 
-
-.image-container{
-    width: 100%;
+.image-container {
+    width: fit-content;
     height: 300px;
     overflow: hidden;
     display: flex;
     align-items: center;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
+    border-radius: 20px 20px 0 0;
 }
+
+.image-container img {
+    width: 100%;
+}
+
+.card-title {
+    display:flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding:0 20px;
+}
+
+.card-title h3 {
+    font-size: 18pt;
+    color: black;
+}
+
+h3.card-price {
+    color: #ee9972;
+}
+
+.card-text p {
+    color:black;
+    margin: 30px 0 50px;
+    padding:0 20px;
+    font-weight: 400;
+    font-family: 'Karla', sans-serif;
+}
+
+
