--- a/src/components/Specials.css
+++ b/src/components/Specials.css
@@ -29,9 +29,24 @@
 
 
 .special-card-container {
-    display: flex;
-    justify-content:space-evenly;
-    gap:2rem;
+    display: grid;
+    grid-template-columns: 31% 31% 31%;
+    gap: 35px;
     margin: 2rem;
     
 }
+
+@media screen and (max-width: 800px) {
+    .special-card-container {
+        grid-template-columns: 47% 47%;
+    }
+}
+
+@media screen and (max-width: 699px){
+    .special-card-container  {
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
+
