--- a/src/components/SpecialsCard.css
+++ b/src/components/SpecialsCard.css
@@ -1,22 +1,22 @@
 
 .card {
-    display: flex;
-    flex-direction: column;
     background-color: #edefee;
-    font-family: 'Karla', sans-serif;
     border-radius: 20px 20px 0 0;
 
 }
 
 .image-container {
+    width: 100%;
+    height: 300px;
     overflow: hidden;
+    display: flex;
     align-items: center;
     border-radius: 20px 20px 0 0;
 }
 
 .image-container img {
     width: 100%;
-    height: auto;
+
 }
 
 .card-title {
@@ -43,4 +43,23 @@ h3.card-price {
     font-family: 'Karla', sans-serif;
 }
 
+@media screen and (max-width: 1040px) {
+    .card {
+        grid-template-columns: 47% 47%;
+    }
+}
 
+
+@media screen and (max-width: 700px){
+    .card {
+        display: flex;
+        flex-direction: column;
+        margin:3rem
+    }
+    
+
+    .image-container {
+        height: 200px;
+    }
+    
+}
