--- a/src/components/Specials.css
+++ b/src/components/Specials.css
@@ -3,7 +3,7 @@
 .specials-container {
     display: flex;
     justify-content: space-between;
-    padding: 0 40px;
+    padding: 2rem;
     align-items: center;
 }
 
@@ -33,7 +33,6 @@
     grid-template-columns: 31% 31% 31%;
     gap: 35px;
     margin: 2rem;
-    
 }
 
 @media screen and (max-width: 800px) {
