--- a/src/components/SpecialsCard.css
+++ b/src/components/SpecialsCard.css
@@ -47,7 +47,8 @@ h3.card-price {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
+    padding: 20px;
+    border-bottom: .5px solid white;
 }
 
 .card-button button {
@@ -56,9 +57,10 @@ h3.card-price {
     padding: 10px 20px;
     border-radius: 15px;
     border:none;
-    box-shadow: 3px 5px black;
+    box-shadow: 2px 3px black;
     transition: .2s ease-in;
     cursor: pointer;
+    border-bottom: .5px solid white;
 }
 
 .card-button button:hover {
@@ -66,8 +68,8 @@ h3.card-price {
     background: #333;
     padding: 10px 20px;
     border-radius: 15px;
-    border-bottom: 1px solid white;
-    box-shadow: 3px 5px black;
+ 
+    box-shadow: 2px 3px black;
 }
 
 @media screen and (max-width: 1040px) {
