--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -16,13 +16,25 @@
     justify-content: space-evenly;
     align-items: center;
 }
-
+.nav-ul a {
+    color:#333;
+    text-decoration: none;
+}
 .nav-ul li {
     display: inline-block;
-    text-decoration: none;
     font-size: 16px;
     font-weight: bold;
+    list-style: none;
 }
+
+.nav-ul li:hover {
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+
+    color: red;
+}
+
 
 
 
