--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 
 .footer-container {
     background-color: #333;
-    margin:2rem;
+    margin:0 2rem;
     color: white;
 }
 
@@ -65,7 +65,6 @@
 .footer-top-section img{
     height: 5rem;
     margin-bottom: 20px;
-
     }
 }
 
