--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,13 +1,13 @@
 
 
 .nav-container {
-  margin-top: 1rem;
   display:flex;
+  margin-bottom: 1rem;
 }
 
 .nav-logo{
     height: 50px;
-    margin-right: 60px;
+    margin-right: 2rem;
 }
 .nav-ul{
     width: 60%;
