--- a/src/components/Reservation.css
+++ b/src/components/Reservation.css
@@ -52,3 +52,30 @@
     font-size: 2.5rem;
     padding: 20px 20px;
 }
+
+@media screen and (max-width: 700px){
+
+    .reservation-container {
+        display:flex;
+        flex-direction: column;
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.42), rgba(0, 0, 0, 0.73)), url("./assets/restaurant-seats.jpg");
+
+    }
+    .reservation-left {
+        display:none;
+    }
+    .reservation-right {
+
+        margin: 2rem auto;
+    }
+    .reservation-wrapper {
+        background: none;
+    }
+    .nav-container {
+        display:none;
+    }
+    footer {
+display: none;
+    }
+
+}
